--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
 <!-- where we build the second card -->
 <div class="back-card">
     <div class="email-address">
-        <h1>autumn.makenzie.cummings@gmail.com</h1>
     </div>
 
     <!-- where we build the container that holds all of the icons -->
     <div class="icon-container">
         <!-- the first icon -->
-        <a href="">
+        <a href="https://autumn-cummings.github.io">
             <img src="Assets/WWW.svg" alt="website logo"></a>
         <!-- the second icon -->
-        <a href="">
+        <a href="https://www.instagram.com/fallflakess/">
             <img src="Assets/Insta.svg" alt="instagram logo">
         </a>
         <!-- the third icon -->
