--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="Assets/Insta.svg" alt="instagram logo">
         </a>
         <!-- the third icon -->
-        <a href="autumn.makenzie.cummings@gmail.com">
+        <a href="mailto:autumn.makenzie.cummings@gmail.com">
             <img src="Assets/Email.svg" alt="email logo">
         </a>
     </div>
